Added google Tag and analytics

--- a/features.html
+++ b/features.html
@@ -26,6 +26,7 @@
       property="og:image"
       content="/public/meta/wicked-wipes-features.jpg"
     />
+    <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -38,10 +39,20 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
     </script>
+    <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
     ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-E50PFDVXYE");
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -73,19 +84,6 @@
       defer
     ></script>
     <script src="https://cdn-ca.pagesense.io/js/zoho3419/8a93ff5516d1450b837c6ffdc0daffcb.js"></script>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-E50PFDVXYE");
-    </script>
     <style>
       .form {
         width: 100%;
@@ -125,7 +123,6 @@
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-
     <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-PNF89GR5"
@@ -134,7 +131,6 @@
         style="display: none; visibility: hidden"
       ></iframe
     ></noscript>
-
     <!-- End Google Tag Manager (noscript) -->
     <!-- Video Banner Section -->
     <section
@@ -160,12 +156,8 @@
           class="hidden md:flex flex-col absolute z-[100] top-56 left-32 leading-[50px]"
           id="video-section1"
         >
-          <h2 class="text-[48px] text-[#97CAEB]">
-            An elegant way to
-          </h2>
-          <h2 class="text-[68px] text-white">
-            cleanse your hands
-          </h2>
+          <h2 class="text-[48px] text-[#97CAEB]">An elegant way to</h2>
+          <h2 class="text-[68px] text-white">cleanse your hands</h2>
           <div class="block absolute z-[100] top-36 left 32">
             <p class="league-spartan text-xl text-white">
               Wicked Wipe is a unique, new hand-cleaning product, encased in an
@@ -299,11 +291,7 @@
         <div
           class="flex flex-col w-full md:gap-y-6 md:bg-[url('/public/white 1.png')] md:bg-cover"
         >
-          <h1
-            class="text-4xl md:text-[78px] text-[#97CAEB]"
-          >
-            Wicked Wipes
-          </h1>
+          <h1 class="text-4xl md:text-[78px] text-[#97CAEB]">Wicked Wipes</h1>
           <h1
             class="text-4xl md:text-[78px] text-[#97CAEB] hover:text-[#3A50B3]"
             id="design-heading"
@@ -340,24 +328,14 @@
     <section class="hidden md:block px-4 md:px-36 py-16 md:py-32 bg-[#3A50B3]">
       <div class="flex flex-col md:flex-row w-full">
         <div class="flex flex-col w-full md:gap-y-6">
-          <h2
-            class="text-white text-[40px] md:text-[78px]"
-          >
-            How to use
-          </h2>
-          <h2
-            class="text-[#97CAEB] text-[40px] md:text-[78px]"
-          >
+          <h2 class="text-white text-[40px] md:text-[78px]">How to use</h2>
+          <h2 class="text-[#97CAEB] text-[40px] md:text-[78px]">
             Wicked Wipes
           </h2>
         </div>
         <div class="flex flex-col w-full mt-8 md:mt-0">
           <div class="w-full md:w-2/4 mb-2">
-            <h2
-              class="text-white text-[28px] md:text-[46px]"
-            >
-              STEP 1
-            </h2>
+            <h2 class="text-white text-[28px] md:text-[46px]">STEP 1</h2>
             <div
               class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB] transition-colors duration-300"
             ></div>
@@ -372,33 +350,21 @@
       </div>
       <div class="w-full flex justify-around py-16">
         <div class="flex flex-col w-56">
-          <h2
-            class="text-white text-[28px] md:text-[46px]"
-          >
-            STEP 2
-          </h2>
+          <h2 class="text-white text-[28px] md:text-[46px]">STEP 2</h2>
           <div
             class="h-5 bg-[#C1DFF3] rounded-full mb-6 mt-2 w-full hover:bg-[#97CAEB]"
             id="step-2"
           ></div>
         </div>
         <div class="flex flex-col w-56">
-          <h2
-            class="text-white text-[28px] md:text-[46px]"
-          >
-            STEP 3
-          </h2>
+          <h2 class="text-white text-[28px] md:text-[46px]">STEP 3</h2>
           <div
             class="h-5 bg-[#C1DFF3] rounded-full mb-6 mt-2 w-full hover:bg-[#97CAEB]"
             id="step-3"
           ></div>
         </div>
         <div class="flex flex-col w-56">
-          <h2
-            class="text-white text-[28px] md:text-[46px]"
-          >
-            STEP 4
-          </h2>
+          <h2 class="text-white text-[28px] md:text-[46px]">STEP 4</h2>
           <div
             class="h-5 bg-[#C1DFF3] rounded-full mb-6 mt-2 w-full hover:bg-[#97CAEB]"
             id="step-4"
@@ -501,14 +467,8 @@
     <section class="md:hidden block px-10 py-16 md:py-32 bg-[#3A50B3]">
       <div class="flex flex-col w-full">
         <div class="flex flex-col w-full md:gap-y-6">
-          <h2
-            class="text-white text-[40px] md:text-[78px]"
-          >
-            How to Use
-          </h2>
-          <h2
-            class="text-[#97CAEB] text-[40px] md:text-[78px]"
-          >
+          <h2 class="text-white text-[40px] md:text-[78px]">How to Use</h2>
+          <h2 class="text-[#97CAEB] text-[40px] md:text-[78px]">
             Wicked Wipes
           </h2>
         </div>
@@ -518,11 +478,7 @@
               <!-- Step 1 -->
               <div class="flex flex-col w-full mt-8">
                 <div class="w-full mb-2">
-                  <h2
-                    class="text-white text-[28px]"
-                  >
-                    STEP 1
-                  </h2>
+                  <h2 class="text-white text-[28px]">STEP 1</h2>
                   <div
                     class="p-2 bg-[#C1DFF3] rounded-full my-3 w-2/5 hover:bg-[#97CAEB] transition-colors duration-300"
                   ></div>
@@ -547,9 +503,7 @@
               <div class="w-full flex flex-col py-16">
                 <div class="flex flex-col justify-center items-center w-full">
                   <div class="w-full my-2 flex flex-col justify-center">
-                    <h2
-                      class="text-white text-[28px] md:text-[46px]"
-                    >
+                    <h2 class="text-white text-[28px] md:text-[46px]">
                       STEP 2
                     </h2>
                     <div
@@ -593,11 +547,7 @@
                 class="flex flex-col justify-center items-center w-full mt-8 md:mt-0"
               >
                 <div class="w-full my-2 flex flex-col justify-center">
-                  <h2
-                    class="text-white text-[28px] md:text-[46px]"
-                  >
-                    STEP 3
-                  </h2>
+                  <h2 class="text-white text-[28px] md:text-[46px]">STEP 3</h2>
                   <div
                     class="p-2 bg-[#C1DFF3] rounded-full my-3 w-2/5 hover:bg-[#97CAEB] transition-colors duration-300"
                   ></div>
@@ -632,11 +582,7 @@
                 class="flex flex-col justify-center items-center w-full md:w-1/3 mt-8 md:mt-0"
               >
                 <div class="w-full my-2 flex flex-col justify-center">
-                  <h2
-                    class="text-white text-[28px] md:text-[46px]"
-                  >
-                    STEP 4
-                  </h2>
+                  <h2 class="text-white text-[28px] md:text-[46px]">STEP 4</h2>
                   <div
                     class="p-2 bg-[#C1DFF3] rounded-full my-3 w-2/5 hover:bg-[#97CAEB] transition-colors duration-300"
                   ></div>
@@ -870,14 +816,10 @@
           <div
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
-          <h2
-            class="text-white text-[14px] md:text-[28px]"
-          >
+          <h2 class="text-white text-[14px] md:text-[28px]">
             Get in touch with us!
           </h2>
-          <h2
-            class="text-white [text-8px] md:text-[16px]"
-          >
+          <h2 class="text-white [text-8px] md:text-[16px]">
             to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
@@ -1067,9 +1009,7 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h2 class="text-white text-base">
-            Follow Us
-          </h2>
+          <h2 class="text-white text-base">Follow Us</h2>
           <div class="flex gap-3 items-center">
             <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
             <img
@@ -1458,5 +1398,6 @@
         },
       });
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
   </body>
 </html>
