--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <meta property="og:image" content="/public/meta/wicked-wipes-home.jpg" />
     <meta property="og:url" content="https://www.wickedwipes.ca" />
-    <!-- Google Tag (g-tag.js) -->
+    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
@@ -34,27 +34,8 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-
       gtag("config", "G-E50PFDVXYE");
     </script>
-    <!--Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
-    </script>
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
-    ></script>
-        <!-- End of Google Tag Manager -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -1405,10 +1386,6 @@
         );
       });
     </script>
-    <script
-      async
-      defer
-      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
-    ></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
   </body>
 </html>
