--- a/private-label.html
+++ b/private-label.html
@@ -30,6 +30,7 @@
       property="og:url"
       content="https://www.wickedwipes.ca/private-label.html"
     />
+    <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -42,10 +43,21 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
     </script>
+    <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
     ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-E50PFDVXYE");
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link rel="stylesheet" href="./index.css" />
@@ -110,7 +122,6 @@
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-
     <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-PNF89GR5"
@@ -230,9 +241,7 @@
       <div
         class="w-full flex flex-col md:flex-row absolute justidy-center md:justify-between gap-y-6 md:gap-x-10 px-6 md:px-24 py-10 items-end bottom-0"
       >
-        <h1
-          class="text-lg md:text-5xl md:whitespace-nowrap"
-        >
+        <h1 class="text-lg md:text-5xl md:whitespace-nowrap">
           Make an unforgettable impression <br class="hidden md:block" />
           with Wicked Wipes
         </h1>
@@ -252,9 +261,7 @@
         data-aos="zoom-in"
         data-aos-duration="1000"
       >
-        <h2 class="text-[48px] text-[#3A50B3]">
-          One of a kind
-        </h2>
+        <h2 class="text-[48px] text-[#3A50B3]">One of a kind</h2>
       </div>
       <div
         class="py-6 p-4 md:p-4 w-full flex justify-center bg-blue-100 rounded-full"
@@ -272,9 +279,7 @@
           data-aos="zoom-in"
           data-aos-duration="1000"
         />
-        <h2
-          class="text-xl text-[#3A50B3] text-center pt-10"
-        >
+        <h2 class="text-xl text-[#3A50B3] text-center pt-10">
           Being the only hand wipe of its kind elevates your business
           immediately
         </h2>
@@ -421,14 +426,10 @@
           <div
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
-          <h2
-            class="text-white text-[14px] md:text-[28px]"
-          >
+          <h2 class="text-white text-[14px] md:text-[28px]">
             Get in touch with us!
           </h2>
-          <h2
-            class="text-white [text-8px] md:text-[16px]"
-          >
+          <h2 class="text-white [text-8px] md:text-[16px]">
             to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
@@ -618,9 +619,7 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h2 class="text-white text-base">
-            Follow Us
-          </h2>
+          <h2 class="text-white text-base">Follow Us</h2>
           <div class="flex gap-3 items-center">
             <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
             <img
@@ -902,5 +901,9 @@
         observer.observe(documentSection);
       });
     </script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
+    ></script>
   </body>
 </html>
