--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
     />
     <meta property="og:image" content="/public/meta/wicked-wipes-home.jpg" />
     <meta property="og:url" content="https://www.wickedwipes.ca" />
+     <!-- Google Tag Manager -->
+     <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
+    </script>
+    <!-- End Google Tag Manager -->
     <!-- Google tag (gtag.js) -->
     <script
       async
