--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
     />
     <meta property="og:image" content="/public/meta/wicked-wipes-home.jpg" />
     <meta property="og:url" content="https://www.wickedwipes.ca" />
+     <!-- Google tag (gtag.js) -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
+     <script>
+       window.dataLayer = window.dataLayer || [];
+       function gtag() {
+         dataLayer.push(arguments);
+       }
+       gtag("js", new Date());
+       gtag("config", "G-E50PFDVXYE");
+     </script>
+
      <!-- Google Tag Manager -->
      <script>
       (function (w, d, s, l, i) {
@@ -37,19 +48,7 @@
       })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
     </script>
     <!-- End Google Tag Manager -->
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-E50PFDVXYE");
-    </script>
+   
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
