Update video section ID for improved clarity and consistency

--- a/features.html
+++ b/features.html
@@ -154,7 +154,7 @@
         <!-- Text Section -->
         <div
           class="hidden md:flex flex-col absolute z-[100] top-56 left-32 leading-[50px]"
-          id="video-section1"
+          id="video-section"
         >
           <h2 class="text-[48px] text-[#97CAEB]">An elegant way to</h2>
           <h2 class="text-[68px] text-white">cleanse your hands</h2>
