--- a/index.html
+++ b/index.html
@@ -23,19 +23,22 @@
     />
     <meta property="og:image" content="/public/meta/wicked-wipes-home.jpg" />
     <meta property="og:url" content="https://www.wickedwipes.ca" />
-     <!-- Google tag (gtag.js) -->
-     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
-     <script>
-       window.dataLayer = window.dataLayer || [];
-       function gtag() {
-         dataLayer.push(arguments);
-       }
-       gtag("js", new Date());
-       gtag("config", "G-E50PFDVXYE");
-     </script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-E50PFDVXYE");
+    </script>
 
-     <!-- Google Tag Manager -->
-     <script>
+    <!-- Google Tag Manager -->
+    <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -48,7 +51,7 @@
       })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
     </script>
     <!-- End Google Tag Manager -->
-   
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -262,10 +265,13 @@
           class="hidden md:flex w-full h-full px-40 absolute overflow-hidden"
         >
           <div
-            class="flex flex-col w-full text-white absolute bottom-0"
+            class="flex flex-col w-full text-white absolute xl:bottom-0 lg:bottom-48 md:bottom-72"
             id="topic1"
           >
-            <h1 class="text-[78px] font-normal w-full" id="topic1">
+            <h1
+              class="xl:text-[78px] lg:text-[48px] md:text-[28px] bottom-0 font-normal w-full"
+              id="topic1"
+            >
               Hygienic, Safe, Natural,<br />
               Environmentally Friendly Wipes
             </h1>
@@ -1399,6 +1405,9 @@
         );
       });
     </script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
+    ></script>
   </body>
 </html>
